Update and rename chemical_space_plot.html to index.html

--- a/CA_PA/index.html
+++ b/CA_PA/index.html
@@ -594,7 +594,7 @@
     <canvas id="lore"></canvas>
 
     
-    <script src="chemical_space_plot.js"></script>
+    <script src="https://georgehodgin.github.io/yield/chemical_space_plot.js"></script>"></script>
     
     <script>
       let smilesDrawer = new SmilesDrawer.Drawer({
